--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -36,6 +36,9 @@
         "type_traits": "cpp",
         "tuple": "cpp",
         "typeinfo": "cpp",
-        "utility": "cpp"
-    }
+        "utility": "cpp",
+        "numeric": "cpp",
+        "cinttypes": "cpp"
+    },
+    "C_Cpp.errorSquiggles": "Enabled"
 }
